# battery-monitor

./: README.md  add_license.py  pyproject.toml  ruff.toml
battery_monitor/: __init__.py  __main__.py  config.py  util.py
